<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Copiii Regelui</string>
    <string name="title_home" tools:ignore="MissingTranslation">Acasă</string>
    <string name="title_categories" tools:ignore="MissingTranslation">Categorii</string>
    <string name="title_favourites" tools:ignore="MissingTranslation">Favorite</string>
    <string name="title_history" tools:ignore="MissingTranslation">Istoric</string>
    <string name="title_user_details" tools:ignore="MissingTranslation">Profil</string>
    <string name="yesLabel">Yes</string>
    <string name="noLabel">No</string>
    <string name="backButton">Back</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="notSet">Not set</string>
    <string name="all">All</string>
    <string name="tryAgain">Try Again</string>
    <string name="offlineMessage">You appear to be offline. Don\'t worry, the app will use and save locally the data for now. The data will sync with the server as soon as you will be back online.</string>
    <string name="discardChanges">This form has unsaved changes. Are you sure you want to discard them? Otherwise, please tap Save.</string>
    <string name="reviewForm">Review Form</string>
    <string name="discard">Discard</string>
    <string name="unautheticatedMessage">You are not signed in. Please Sign In into the Profile section.</string>
    <string name="notFound">No Translation</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="bible">Bible</string>
    <string name="prayer">Prayer</string>
    <string name="family">Family</string>
    <string name="school">School</string>
    <string name="church">Church</string>
    <string name="volunteering">Volunteering</string>
    <string name="dailySchedule">Daily Schedule</string>
    <string name="behavior">Behavior</string>
    <string name="body">Body</string>
    <string name="health">Health</string>
    <string name="sport">Sport</string>
    <string name="knowledge">Knowledge</string>
    <string name="hobby">Hobby</string>
    <string name="media">Media</string>
    <string name="personalFinances">Personal Finances</string>
    <string name="loans">Loans</string>
    <string name="debts">Debts</string>
    <string name="spiritual">Spiritual Development</string>
    <string name="physical">Physical Development</string>
    <string name="intellectual">Intellectual</string>
    <string name="skills">Skills</string>
    <string name="social">Social Relations</string>
    <string name="finance">Finances</string>
    <string name="helloGreeting">Hello, %s!</string>
    <string name="helloGreetingSimple">Hello!</string>
    <string name="unknownName">Unknown</string>
    <string name="logoutMessage">Are you sure you want to logout?</string>
    <string name="deleteAccountMessage">Are you sure you want to delete your account? If you delete your account all your data will be lost.</string>
    <string name="logoutYesAction">Yes, logout</string>
    <string name="logoutNoAction">No, stay logged in</string>
    <string name="loginButton">Sign In</string>
    <string name="logoutButton">Sign Out</string>
    <string name="deleteAccount">Delete account</string>
    <string name="detailsLabel">Details</string>
    <string name="editProfile">Edit Profile</string>
    <string name="report">Report</string>
    <string name="bibleHeader">Through Jesus, God loves me and wants to communicate with me through His Word, which I read daily!</string>
    <string name="prayerHeader">Through Jesus, God has loved me and wants to communicate with me through my personal prayer!</string>
    <string name="bodyHeader">With His help and with Him, I develop in the image of God!</string>
    <string name="healthHeader">Together with Jesus and like Him, I develop in His image.</string>
    <string name="sportHeader">With His help and with Him, I develop in the image of God!</string>
    <string name="knowledgeHeader">With His help and with Him, I develop my knowledge.</string>
    <string name="hobbyHeader">With His help and with Him, I develop my knowledge.</string>
    <string name="mediaHeader">With His help and with Him, I develop my knowledge.</string>
    <string name="volunteeringHeader">Following God\'s example, I share the presence of Jesus!</string>
    <string name="dailyScheduleHeader">With His help and with Him, I use the time in the best way!</string>
    <string name="behaviorHeader">With His help and with Him, I develop my behavior.</string>
    <string name="familyHeader">With His help and with Him, I develop my behavior.</string>
    <string name="schoolHeader">With His help and with Him, I develop my behavior.</string>
    <string name="churchHeader">With His help and with Him, I develop my behavior.</string>
    <string name="personalFinancesHeader">With His help and with Him, I share!</string>
    <string name="loansHeader">With His help and with Him, I share!</string>
    <string name="debtsHeader">With His help and with Him, I share!</string>
    <string name="bibleMessage">The thought: ”Your word is a lamp for my feet, a light on my path.” - (Ps. 119:105)</string>
    <string name="prayerMessage">The thought: ”Prayer is not a ”I want” list or a quick fix tool. Prayer is a time spent talking to God and listening to Him! - Kandy Elliot</string>
    <string name="bodyMessage">The thought: ”Our habits should be brought under the control of a mind that is itself under the control of God.” - Ellen White</string>
    <string name="healthMessage">The thought: ”Health depends largely on our daily habits. No drug or surgery can compensate for the consequences of unhealthy habits.” - George D. Pamplona-Roger</string>
    <string name="sportMessage">The thought: ”Our habits should be brought under the control of a mind that is itself under the control of God.” - Ellen White</string>
    <string name="knowledgeMessage">The heart of the discerning acquires knowledge, for the ears of the wise seek it out. - (Prov. 18:15)</string>
    <string name="hobbyMessage">Finally, brothers and sisters, whatever is true, whatever is noble, whatever is right, whatever is pure, whatever is lovely, whatever is admirable—if anything is excellent or praiseworthy—think about such things. (Philippians 4:8)</string>
    <string name="mediaMessage">I will not look with approval on anything that is vile. (Psalms 101:3)</string>
    <string name="volunteeringMessage">But the fruit of the Spirit is love, joy, peace, forbearance, kindness, goodness, faithfulness, gentleness and self-control. Galatians 5:22</string>
    <string name="dailyScheduleMessage">Our success in acquiring knowledge and intellectual culture depends on the correct use of time. - (Ellen White)</string>
    <string name="behaviorMessage">Our success in acquiring knowledge and intellectual culture depends on the correct use of time. - (Ellen White)</string>
    <string name="familyMessage">Our success in acquiring knowledge and intellectual culture depends on the correct use of time. - (Ellen White)</string>
    <string name="schoolMessage">Our success in acquiring knowledge and intellectual culture depends on the correct use of time. - (Ellen White)</string>
    <string name="churchMessage">Our success in acquiring knowledge and intellectual culture depends on the correct use of time. - (Ellen White)</string>
    <string name="personalFinancesMessage">I manage my finances. Money are a tool used by people to accomplish various trades.</string>
    <string name="loansMessage">I manage my money, hence I record all the amounts I lend to others, but also the money I borrow, because I want to be fair about personal finances.</string>
    <string name="debtsMessage">I manage my money, hence I record all the amounts I lend to others, but also the money I borrow, because I want to be fair about personal finances.</string>
    <string name="genesis">Genesis</string>
    <string name="exodus">Exodus</string>
    <string name="leviticus">Leviticus</string>
    <string name="numbers">Numbers</string>
    <string name="deuteronomy">Deuteronomy</string>
    <string name="joshua">Joshua</string>
    <string name="judges">Judges</string>
    <string name="ruth">Ruth</string>
    <string name="samuel1">1 Samuel</string>
    <string name="samuel2">2 Samuel</string>
    <string name="kings1">1 Kings</string>
    <string name="kings2">2 Kings</string>
    <string name="chronicals1">1 Chronicals</string>
    <string name="chronicals2">2 Chronicals</string>
    <string name="ezra">Ezra</string>
    <string name="nehemiah">Nehemiah</string>
    <string name="esther">Esther</string>
    <string name="job">Job</string>
    <string name="psalms">Psalms</string>
    <string name="proverbs">Proverbs</string>
    <string name="ecclesiastes">Ecclesiastes</string>
    <string name="songOfSongs">Song Of Songs</string>
    <string name="isaiah">Isaiah</string>
    <string name="jeremiah">Jeremiah</string>
    <string name="lamentations">Lamentations</string>
    <string name="ezekiel">Ezekiel</string>
    <string name="daniel">Daniel</string>
    <string name="hosea">Hosea</string>
    <string name="joel">Joel</string>
    <string name="amos">Amos</string>
    <string name="obadiah">Obadiah</string>
    <string name="jonah">Jonah</string>
    <string name="micah">Micah</string>
    <string name="nahum">Nahum</string>
    <string name="habakkuk">Habakkuk</string>
    <string name="zephanish">Zephanish</string>
    <string name="haggai">Haggai</string>
    <string name="zechariah">Zechariah</string>
    <string name="malachi">Malachi</string>
    <string name="matthew">Matthew</string>
    <string name="mark">Mark</string>
    <string name="luke">Luke</string>
    <string name="john">John</string>
    <string name="actsOfTheApostles">Acts Of The Apostles</string>
    <string name="romans">Romans</string>
    <string name="corinthians1">1 Corinthians</string>
    <string name="corinthians2">2 Corinthians</string>
    <string name="galatians">Galatians</string>
    <string name="ephesians">Ephesians</string>
    <string name="philippians">Philippians</string>
    <string name="colossians">Colossians</string>
    <string name="thessalonians1">1 Thessalonians</string>
    <string name="thessalonians2">2 Thessalonians</string>
    <string name="timothy1">1 Timothy</string>
    <string name="timothy2">2 Timothy</string>
    <string name="titus">Titus</string>
    <string name="philemon">Philemon</string>
    <string name="hebrews">Hebrews</string>
    <string name="james">James</string>
    <string name="peter1">1 Peter</string>
    <string name="peter2">2 Peter</string>
    <string name="john1">1 John</string>
    <string name="john2">2 John</string>
    <string name="john3">3 John</string>
    <string name="jude">Jude</string>
    <string name="revelation">Revelation</string>
    <string name="worship">Worship</string>
    <string name="confession">Confession</string>
    <string name="gratefulness">Gratefulness</string>
    <string name="request">Request</string>
    <string name="intercession">Intercession</string>
    <string name="praise">Praise</string>
    <string name="gratitude">Gratitude</string>
    <string name="nameLabel">Name</string>
    <string name="parentsLabel">Parents</string>
    <string name="churchLabel">Church</string>
    <string name="coachLabel">Coach</string>
    <string name="pastorLabel">Pastor</string>
    <string name="schoolLabel">School</string>
    <string name="gradeLabel">Grade</string>
    <string name="notAuthenticatedMessage">You are not signed in. Please Sign In into the Profile section.</string>
</resources>