<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_categories"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_reports"
        android:title="@string/report" />

    <item
        android:id="@+id/navigation_user_details"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_user_details" />

</menu>