<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_categories">

    <fragment
        android:id="@+id/navigation_categories"
        android:name="ro.azs.kidsdevelopment.ui.categories.CategoriesFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="ro.azs.kidsdevelopment.ui.favorites.FavoritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_categories" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_reports"-->
<!--        android:name="ro.azs.kidsdevelopment.ui.reports.ReportsFragment"-->
<!--        android:label="@string/report"-->
<!--        tools:layout="@layout/fragment_reports" />-->

    <fragment
        android:id="@+id/navigation_history"
        android:name="ro.azs.kidsdevelopment.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_user_details"
        android:name="ro.azs.kidsdevelopment.ui.user.UserDetailsFragment"
        android:label="@string/title_user_details"
        tools:layout="@layout/fragment_user_details" />

</navigation>