<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ro.azs.kidsdevelopment.ui.user.UserDetailsViewModel" />

        <variable
            name="presenter"
            type="ro.azs.kidsdevelopment.ui.user.UserDetailsContract.Presenter" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context=".ui.user.UserDetailsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/large_margin"
            tools:context=".ui.user.UserDetailsFragment">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_profile_v2" />

            <TextView
                android:id="@+id/profile_welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@{viewModel.userGreeting}"
                android:textColor="@color/text_color_blue_2"
                android:textSize="@dimen/toolbar_text_size"
                android:textStyle="bold"
                tools:text="Buna, David!" />

            <Button
                android:id="@+id/profile_button_login"
                style="@style/DarkBlueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:onClick="@{() -> presenter.onLogInClicked()}"
                android:text="@string/loginButton"
                app:show="@{viewModel.userDetails == null}" />


            <include
                layout="@layout/layout_user_profile_details"
                app:isEditable="@{false}"
                tools:visibility="gone"
                app:show="@{viewModel.userDetails != null}"
                app:viewModel="@{viewModel.userDetails}" />



            <Button
                android:id="@+id/profile_button_logout"
                style="@style/DarkBlueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/large_margin"
                android:onClick="@{() -> presenter.onLogOutClicked()}"
                android:text="@string/logoutButton"
                app:show="@{viewModel.userDetails != null}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="@dimen/bottom_navigation_size_height">

                <TextView
                    style="@style/HyperlinkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/large_margin"
                    android:onClick="@{() -> presenter.onDeleteAccountClicked()}"
                    android:text="@string/deleteAccount"
                    app:drawableStartCompat="@drawable/ic_remove_account"
                    android:drawablePadding="@dimen/small_margin"
                    app:show="@{viewModel.userDetails != null}" />


                <TextView
                    style="@style/HyperlinkText"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/large_margin"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> presenter.onContactUsClicked()}"
                    android:text="@string/contactLabel"
                    app:drawableStartCompat="@drawable/ic_contact"
                    android:drawablePadding="@dimen/small_margin"
                    app:show="@{viewModel.userDetails != null}" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</layout>