<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isEditable"
            type="Boolean" />

        <variable
            name="viewModel"
            type="ro.azs.kidsdevelopment.ui.user.UserProfileFormData" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="@{isEditable}"
        android:orientation="vertical"
        android:paddingStart="@dimen/xlarge_margin"
        android:paddingTop="@dimen/medium_s_margin"
        android:paddingEnd="@dimen/xlarge_margin"
        android:paddingBottom="@dimen/medium_s_margin">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/labelBarrier"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:barrierDirection="end"
            app:constraint_referenced_ids="nameLabel, parentsLabel, churchLabel, coachLabel, pastorLabel, schoolLabel,gradeLabel" />

        <TextView
            android:id="@+id/nameLabel"
            style="@style/UserDetails_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/nameText"
            android:text="@string/nameLabel"
            app:layout_constraintBottom_toBottomOf="@id/nameText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/nameText" />

        <EditText
            android:id="@+id/nameText"
            style="@style/UserDetails_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{isEditable}"
            android:hint="@string/nameLabel"
            android:text="@={viewModel.name}"
            app:layout_constraintBaseline_toBaselineOf="@id/nameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/labelBarrier"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/name_separator"
            layout="@layout/separator_white_thin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_separator_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameText" />


        <TextView
            android:id="@+id/parentsLabel"
            style="@style/UserDetails_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/parentsText"
            android:text="@string/parentsLabel"
            app:layout_constraintBottom_toBottomOf="@id/parentsText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/parentsText" />

        <EditText
            android:id="@+id/parentsText"
            style="@style/UserDetails_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{isEditable}"
            android:hint="@string/parentsLabel"
            android:inputType="text"
            android:text="@={viewModel.parents}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/labelBarrier"
            app:layout_constraintTop_toBottomOf="@id/nameText" />

        <include
            android:id="@+id/parents_separator"
            layout="@layout/separator_white_thin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_separator_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/parentsText" />


        <TextView
            android:id="@+id/churchLabel"
            style="@style/UserDetails_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/churchText"
            android:text="@string/churchLabel"
            app:layout_constraintBottom_toBottomOf="@id/churchText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/churchText" />

        <EditText
            android:id="@+id/churchText"
            style="@style/UserDetails_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{isEditable}"
            android:hint="@string/churchLabel"
            android:inputType="text"
            android:text="@={viewModel.church}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/labelBarrier"
            app:layout_constraintTop_toBottomOf="@id/parentsText" />

        <include
            android:id="@+id/church_separator"
            layout="@layout/separator_white_thin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_separator_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/churchText" />

        <TextView
            android:id="@+id/coachLabel"
            style="@style/UserDetails_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/churchText"
            android:text="@string/coachLabel"
            app:layout_constraintBottom_toBottomOf="@id/coachText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/churchText" />

        <EditText
            android:id="@+id/coachText"
            style="@style/UserDetails_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{isEditable}"
            android:hint="@string/coachLabel"
            android:inputType="text"
            android:text="@={viewModel.coach}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/labelBarrier"
            app:layout_constraintTop_toBottomOf="@id/churchText" />

        <include
            android:id="@+id/coach_separator"
            layout="@layout/separator_white_thin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_separator_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coachText" />

        <TextView
            android:id="@+id/pastorLabel"
            style="@style/UserDetails_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/pastorText"
            android:text="@string/pastorLabel"
            app:layout_constraintBottom_toBottomOf="@id/pastorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coachText" />

        <EditText
            android:id="@+id/pastorText"
            style="@style/UserDetails_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{isEditable}"
            android:hint="@string/pastorLabel"
            android:inputType="text"
            android:text="@={viewModel.pastor}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/labelBarrier"
            app:layout_constraintTop_toBottomOf="@id/coachText" />

        <include
            android:id="@+id/pastor_separator"
            layout="@layout/separator_white_thin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_separator_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pastorText" />

        <TextView
            android:id="@+id/schoolLabel"
            style="@style/UserDetails_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/schoolText"
            android:text="@string/schoolLabel"
            app:layout_constraintBottom_toBottomOf="@id/schoolText"
            app:layout_constraintStart_toEndOf="@id/labelBarrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pastorText" />

        <EditText
            android:id="@+id/schoolText"
            style="@style/UserDetails_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{isEditable}"
            android:hint="@string/schoolLabel"
            android:inputType="text"
            android:text="@={viewModel.school}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/labelBarrier"
            app:layout_constraintTop_toBottomOf="@id/pastorText" />

        <include
            android:id="@+id/school_separator"
            layout="@layout/separator_white_thin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_separator_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schoolText" />

        <TextView
            android:id="@+id/gradeLabel"
            style="@style/UserDetails_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/gradeText"
            android:text="@string/gradeLabel"
            app:layout_constraintBottom_toBottomOf="@id/gradeText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gradeText" />

        <EditText
            android:id="@+id/gradeText"
            style="@style/UserDetails_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{isEditable}"
            android:hint="@string/gradeLabel"
            android:inputType="text"
            android:text="@={viewModel.grade}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/labelBarrier"
            app:layout_constraintTop_toBottomOf="@id/schoolText" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>